# ChessEnum

./: CMakeLists.txt  main.cpp  pieces.cpp  pieces.h
test/: CMakeLists.txt  PiecesFixture.cpp  PiecesTests.cpp  runAllTests.cpp
